test_scores/negative_dimers/features/O75570.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/O75570.pkl.xz